--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.609.0",
+    "@aws-sdk/lib-storage": "^3.609.0",
     "@faker-js/faker": "^8.4.1",
     "@hapi/joi": "^17.1.1",
     "@nestjs-modules/mailer": "^2.0.2",
@@ -57,6 +59,7 @@
     "@types/express": "^4.17.17",
     "@types/hapi__joi": "^17.1.14",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.15",
     "@types/supertest": "^6.0.0",
