--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/express-session": "^1.18.0",
     "@types/passport-local": "^1.0.38",
     "argon2": "^0.40.3",
+    "aws-sdk-client-mock": "^4.0.1",
     "cache-manager": "^5.7.1",
     "cache-manager-redis-store": "2",
     "class-transformer": "^0.5.1",
